Central library Dockerization

--- a/central-library/.env
+++ b/central-library/.env
@@ -1,5 +1,5 @@
 CENTRAL_LIBRARY_HOST=central_library
 CENTRAL_LIBRARY_PORT=9080
 
-CENTRAL_LIBRARY_DB_HOST=127.0.0.1
+CENTRAL_LIBRARY_DB_HOST=central_library_db
 CENTRAL_LIBRARY_DB_PORT=27017
