--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,19 +1,25 @@
-name: Docker Image CI
+name: Docker Build and Push
+
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v3
-  - name: docker login
-  env:
-  DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-  run: |
-  docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-  - name: Build the Docker image
-  run: docker build . --file Dockerfile --tag cloudftn/example:v2
-  - name: Docker Push
-  run: docker push cloudftn/example:v2
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker images
+      run: |
+        docker-compose build
+        docker-compose push
