--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Login to Docker Hub
-      uses: docker/build-push-action@v2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker images
+      run: |
+        docker build -t rbojan2000/central-library ./central-library
+        docker push rbojan2000/central-library:latest
