--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,24 +2,36 @@ name: Docker Build and Push
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+    paths:
+      - 'central-library/**'
+      - 'belgrade/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            central-library:
+              - 'central-library/**'
+              - 'belgrade/**'
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker images
+        if: steps.changes.outputs.central-library == 'true'
+        run: |
+          docker build -t rbojan2000/central-library ./central-library
+          docker push rbojan2000/central-library:latest
 
-    - name: Build and push Docker images
-      run: |
-        docker build -t rbojan2000/central-library ./central-library
-        docker push rbojan2000/central-library:latest
+      - name: Build and push Docker images
+        if: steps.changes.outputs.belgrade == 'true'
+        run: |
+          echo 'hello from belgrade'
