--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,28 +10,33 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: dorny/paths-filter@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Determine changed directory
         id: changes
+        uses: dorny/paths-filter@v2
         with:
           filters: |
             central-library:
               - 'central-library/**'
+            belgrade:
               - 'belgrade/**'
+
       - name: Docker login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker images
+      - name: Build and push Docker image for central-library
         if: steps.changes.outputs.central-library == 'true'
         run: |
           docker build -t rbojan2000/central-library ./central-library
           docker push rbojan2000/central-library:latest
 
-      - name: Build and push Docker images
+      - name: Build and push Docker image for belgrade
         if: steps.changes.outputs.belgrade == 'true'
         run: |
           echo 'hello from belgrade'
