Update url paths

--- a/city-library/.env
+++ b/city-library/.env
@@ -1,8 +1,8 @@
-LIBRARY_HOST=host
+LIBRARY_HOST=localhost
 LIBRARY_PORT=9081
-LIBRARY_CITY=CITY
+LIBRARY_CITY=nis
 
-LIBRARY_DB_HOST=host
+LIBRARY_DB_HOST=localhost
 LIBRARY_DB_PORT=27017
 
 CENTRAL_LIBRARY_PORT=9080
